--- a/stylesheet.less
+++ b/stylesheet.less
@@ -108,32 +108,12 @@ body {
 	height: 100%;
 }
 
-div[role="main"] {
-	.widget.responsiveslideshow, .slideshow-widget-wrapper, .widget.responsiveslideshow .slideshow-widget, .widget.responsiveslideshow .slideshow-image-list {
-		min-height: auto;
-		height: auto;
-	}
-}
 
 .slideshow-widget-controls {
 	position: absolute;
 	top: 48%;
 	right: 25px;
 }
-
-div[role="main"] {
-	.slideshow-widget-controls {
-		bottom: 25px;
-		top: initial;
-		right: 0;
-		left: 0;
-		margin: 0 auto;
-	}
-	.widget.responsiveslideshow .slideshow-widget-controls .dot {
-		display: inline-block;
-	}
-}
-
 
 
 
@@ -194,7 +174,7 @@ div[role="main"] {
 
 .bk-nav {
 	background: fade(@color-swatch1, 80%);
-	border-left: 1px solid fade(@color-swatch4, 3.5%);
+	border-left: 1px solid fade(@color-swatch4, 3%);
 	height: 100%;
 	position: fixed;
 	right: -325px;
